Fix off-center header

--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 .header {
 	margin: 0px;
-	padding: 20px 28px;
+	padding: 20px;
+	padding-left: 0px;
+	padding-right: 0px;
 	width: 100%;
   	background: #f6f6f6;
 	text-align: center;
